Cambiando el menú a texto en ingles

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       </a>
       <ul class="lista-navegacion">
         <li class="lista-enlace">
-          <a href="index.html" class="enlace-navegacion">Inicio</a>
+          <a href="index.html" class="enlace-navegacion">Home</a>
         </li>
         <li class="lista-enlace">
-          <a href="servicios.html" class="enlace-navegacion">Servicios</a>
+          <a href="servicios.html" class="enlace-navegacion">Services</a>
         </li>
         <li class="lista-enlace">
           <a href="blog.html" class="enlace-navegacion">Blog</a>
         </li>
         <li class="lista-enlace">
-          <a href="contacto.html" class="enlace-navegacion">Contactos</a>
+          <a href="contacto.html" class="enlace-navegacion">Contact</a>
         </li>
       </ul>
       <div class="limpiar"></div>
