Contenido principal cat HTML-CSS

--- a/index.html
+++ b/index.html
@@ -34,5 +34,175 @@
       </ul>
       <div class="limpiar"></div>
     </nav>
+    <main>
+      <h1 class="titulo-principal">Mascotas del año</h1>
+      <div class="contenedor">
+        <div class="articles">
+          <article>
+            <h2 class="subtitulo">Cats</h2>
+            <img
+              class="imagen-tarjeta"
+              src="img/cat.jpg"
+              title="Gatito"
+              alt="Imagen de un Gatito Plomo con blanco"
+            />
+            <p id="parrafo">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et amet
+              laboriosam rerum officiis sequi consequuntur ad provident?
+              Molestias quae quas eius similique, ipsum cumque blanditiis!
+              Voluptates obcaecati velit similique animi. Facere repellendus,
+              mollitia, odio, sint illum ut aliquam natus iure quaerat quas
+              omnis asperiores inventore modi autem dicta rerum totam eius
+              molestiae ea unde dignissimos harum repellat quis! Quas, natus?
+              Molestias eveniet quia a veritatis autem, libero amet praesentium
+              atque alias quibusdam maxime dolores quis voluptas. Quasi
+              assumenda minima rem illum blanditiis exercitationem, autem
+              veritatis laudantium aperiam explicabo obcaecati repudiandae!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+              optio amet at nobis commodi voluptate, facilis explicabo corrupti,
+              culpa aliquid inventore voluptatibus nemo nesciunt ipsam, quae
+              nulla. Consequatur, eaque placeat. Ipsa modi fugiat ullam. Dolor
+              quisquam repudiandae, alias, a nobis voluptates et tempora ab
+              perspiciatis aliquid fuga accusantium, pariatur expedita in
+              dolorem eligendi doloremque at cupiditate perferendis ut. Saepe,
+              earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Autem soluta, labore corporis perferendis similique harum quos
+              quas aperiam quod voluptatum laboriosam provident! Sunt incidunt
+              cupiditate consequuntur laudantium error hic tempora.
+            </p>
+            <a class="link" id="link" href="https://www.google.com">ver más</a>
+          </article>
+
+          <article>
+            <h2 class="subtitulo">Cats</h2>
+            <img
+              class="imagen-tarjeta"
+              src="img/cat.jpg"
+              title="Gatito"
+              alt="Imagen de un Gatito Plomo con blanco"
+            />
+            <p id="parrafo">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et amet
+              laboriosam rerum officiis sequi consequuntur ad provident?
+              Molestias quae quas eius similique, ipsum cumque blanditiis!
+              Voluptates obcaecati velit similique animi. Facere repellendus,
+              mollitia, odio, sint illum ut aliquam natus iure quaerat quas
+              omnis asperiores inventore modi autem dicta rerum totam eius
+              molestiae ea unde dignissimos harum repellat quis! Quas, natus?
+              Molestias eveniet quia a veritatis autem, libero amet praesentium
+              atque alias quibusdam maxime dolores quis voluptas. Quasi
+              assumenda minima rem illum blanditiis exercitationem, autem
+              veritatis laudantium aperiam explicabo obcaecati repudiandae!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+              optio amet at nobis commodi voluptate, facilis explicabo corrupti,
+              culpa aliquid inventore voluptatibus nemo nesciunt ipsam, quae
+              nulla. Consequatur, eaque placeat. Ipsa modi fugiat ullam. Dolor
+              quisquam repudiandae, alias, a nobis voluptates et tempora ab
+              perspiciatis aliquid fuga accusantium, pariatur expedita in
+              dolorem eligendi doloremque at cupiditate perferendis ut. Saepe,
+              earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Autem soluta, labore corporis perferendis similique harum quos
+              quas aperiam quod voluptatum laboriosam provident! Sunt incidunt
+              cupiditate consequuntur laudantium error hic tempora.
+            </p>
+            <a class="link" id="link" href="https://www.google.com">ver más</a>
+          </article>
+
+          <article>
+            <h2 class="subtitulo">Cats</h2>
+            <img
+              class="imagen-tarjeta"
+              src="img/cat.jpg"
+              title="Gatito"
+              alt="Imagen de un Gatito Plomo con blanco"
+            />
+            <p id="parrafo">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et amet
+              laboriosam rerum officiis sequi consequuntur ad provident?
+              Molestias quae quas eius similique, ipsum cumque blanditiis!
+              Voluptates obcaecati velit similique animi. Facere repellendus,
+              mollitia, odio, sint illum ut aliquam natus iure quaerat quas
+              omnis asperiores inventore modi autem dicta rerum totam eius
+              molestiae ea unde dignissimos harum repellat quis! Quas, natus?
+              Molestias eveniet quia a veritatis autem, libero amet praesentium
+              atque alias quibusdam maxime dolores quis voluptas. Quasi
+              assumenda minima rem illum blanditiis exercitationem, autem
+              veritatis laudantium aperiam explicabo obcaecati repudiandae!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+              optio amet at nobis commodi voluptate, facilis explicabo corrupti,
+              culpa aliquid inventore voluptatibus nemo nesciunt ipsam, quae
+              nulla. Consequatur, eaque placeat. Ipsa modi fugiat ullam. Dolor
+              quisquam repudiandae, alias, a nobis voluptates et tempora ab
+              perspiciatis aliquid fuga accusantium, pariatur expedita in
+              dolorem eligendi doloremque at cupiditate perferendis ut. Saepe,
+              earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Autem soluta, labore corporis perferendis similique harum quos
+              quas aperiam quod voluptatum laboriosam provident! Sunt incidunt
+              cupiditate consequuntur laudantium error hic tempora.
+            </p>
+            <a class="link" id="link" href="https://www.google.com">ver más</a>
+          </article>
+
+          <article>
+            <h2 class="subtitulo">Cats</h2>
+            <img
+              class="imagen-tarjeta"
+              src="img/cat.jpg"
+              title="Gatito"
+              alt="Imagen de un Gatito Plomo con blanco"
+            />
+            <p id="parrafo">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et amet
+              laboriosam rerum officiis sequi consequuntur ad provident?
+              Molestias quae quas eius similique, ipsum cumque blanditiis!
+              Voluptates obcaecati velit similique animi. Facere repellendus,
+              mollitia, odio, sint illum ut aliquam natus iure quaerat quas
+              omnis asperiores inventore modi autem dicta rerum totam eius
+              molestiae ea unde dignissimos harum repellat quis! Quas, natus?
+              Molestias eveniet quia a veritatis autem, libero amet praesentium
+              atque alias quibusdam maxime dolores quis voluptas. Quasi
+              assumenda minima rem illum blanditiis exercitationem, autem
+              veritatis laudantium aperiam explicabo obcaecati repudiandae!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci
+              optio amet at nobis commodi voluptate, facilis explicabo corrupti,
+              culpa aliquid inventore voluptatibus nemo nesciunt ipsam, quae
+              nulla. Consequatur, eaque placeat. Ipsa modi fugiat ullam. Dolor
+              quisquam repudiandae, alias, a nobis voluptates et tempora ab
+              perspiciatis aliquid fuga accusantium, pariatur expedita in
+              dolorem eligendi doloremque at cupiditate perferendis ut. Saepe,
+              earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Autem soluta, labore corporis perferendis similique harum quos
+              quas aperiam quod voluptatum laboriosam provident! Sunt incidunt
+              cupiditate consequuntur laudantium error hic tempora.
+            </p>
+            <a class="link" id="link" href="https://www.google.com">ver más</a>
+          </article>
+        </div>
+        <!--articles-->
+        <aside class="aside">
+          <section class="aside-superior">
+            <h2 class="subtitulo">Otros post</h2>
+            <img
+              src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1443&q=80"
+              class="aside-imagen"
+              alt=""
+            />
+            <ul class="aside-listas">
+              <li class="aside-lista"><a href=""> Frameworks 2022 </a></li>
+              <li class="aside-lista"><a href=""> Trucos CSS</a></li>
+              <li class="aside-lista"><a href=""> Librerías JS</a></li>
+              <li class="aside-lista">
+                <a href=""> La importancia de UI/UX</a>
+              </li>
+            </ul>
+          </section>
+        </aside>
+        <div class="limpiar"></div>
+        <div>
+          <h2 class="subtitulo centrado">My history</h2>
+          <video id="video" src="video/video.mp4" controls></video>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
