footer HTML-CSS

--- a/index.html
+++ b/index.html
@@ -204,5 +204,8 @@
         </div>
       </div>
     </main>
+    <footer class="footer">
+      <p class="footer-text">&copy;copyright-2023 mod1</p>
+    </footer>
   </body>
 </html>
