--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2 class="subtitulo">Cats</h2>
             <img
               class="imagen-tarjeta"
-              src="img/cat.jpg"
+              src="img/card1.jpg"
               title="Gatito"
               alt="Imagen de un Gatito Plomo con blanco"
             />
@@ -77,7 +77,7 @@
             <h2 class="subtitulo">Cats</h2>
             <img
               class="imagen-tarjeta"
-              src="img/cat.jpg"
+              src="img/card2.jpg"
               title="Gatito"
               alt="Imagen de un Gatito Plomo con blanco"
             />
@@ -112,7 +112,7 @@
             <h2 class="subtitulo">Cats</h2>
             <img
               class="imagen-tarjeta"
-              src="img/cat.jpg"
+              src="img/card3.jpg"
               title="Gatito"
               alt="Imagen de un Gatito Plomo con blanco"
             />
@@ -147,7 +147,7 @@
             <h2 class="subtitulo">Cats</h2>
             <img
               class="imagen-tarjeta"
-              src="img/cat.jpg"
+              src="img/card4.jpg"
               title="Gatito"
               alt="Imagen de un Gatito Plomo con blanco"
             />
@@ -182,17 +182,17 @@
         <aside class="aside">
           <section class="aside-superior">
             <h2 class="subtitulo">Otros post</h2>
-            <img
-              src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1443&q=80"
-              class="aside-imagen"
-              alt=""
-            />
+            <img src="img/aside.jpg" class="aside-imagen" alt="" />
             <ul class="aside-listas">
-              <li class="aside-lista"><a href=""> Frameworks 2022 </a></li>
-              <li class="aside-lista"><a href=""> Trucos CSS</a></li>
-              <li class="aside-lista"><a href=""> Librerías JS</a></li>
               <li class="aside-lista">
-                <a href=""> La importancia de UI/UX</a>
+                <a href=""> Juguetes para perros y gatos </a>
+              </li>
+              <li class="aside-lista"><a href=""> Rascadores</a></li>
+              <li class="aside-lista">
+                <a href=""> Ropa navideña para mascotas</a>
+              </li>
+              <li class="aside-lista">
+                <a href="">Comida saludable</a>
               </li>
             </ul>
           </section>
